--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@ It was observed that the physical constants are tightly contrived, but only thre
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first [2], must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
@@ -185,7 +185,7 @@ R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 4, by intervention of canonical mathematical constants.
 
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
-which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
+which is the simplest case of Eddington's statistical theory \cite{Eddy}. The position of a `reference particle`
 is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
@@ -193,7 +193,7 @@ R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 \end{equation}
 \textit{This is the definitive interpretation of the Double Large Number Fine-tuning}. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
-Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
+Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddy}.
 
 Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
@@ -647,7 +647,7 @@ $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^
 proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{prime}/\lambdabar_e \approx 27^{27}, with 27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
 $$ a/(a-1) \approx 3^{1/150} $$
-Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory [2].
+Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddy}.
 
 \subsection{The Arithmetical Logic: Holic Principle}
 
@@ -1190,7 +1190,7 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 \bibitem{Carr} Carr B.J. and Rees M.J., ``The anthropic principle and the
 structure of the physical world'', Nature 278, 605-612 (1979).
 
-\bibitem{2} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
+\bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
 \bibitem{3} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. Springer
 International Publishing AG. A. Tadjer et al. (eds.), Quantum Systems in
@@ -1309,6 +1309,7 @@ Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349-352 (1987).
 \bibitem{33} Atiyah M. Private communication (December 2018).
 
 %\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
+
 \end{thebibliography}
 \vspace*{-6pt}
 \centerline{\rule{72pt}{0.4pt}}
