--- a/main.tex
+++ b/main.tex
@@ -78,13 +78,13 @@ It was observed that the physical constants are tightly contrived, but only thre
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology [3].
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology \cite{Sanchez1}.
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
 The present article shows that \textit{Physics is a unique part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, or the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules [3].
+\textit{A decisive point of physics is the energy conservation, or the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
 
@@ -133,8 +133,8 @@ We look here for a systematic organization of dimensionless physical quantities 
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
-clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity) [3].
-This Cosmic Fine-Tuning leads directly to a \textit{Gravitational Hydrogen model of the visible universe} [3]
+clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
+This Cosmic Fine-Tuning leads directly to a \textit{Gravitational Hydrogen model of the visible universe} \cite{Sanchez1}
 defining the Universe horizon radius: $R = 2a_{G} \lambdabar_{e}$ the factor 2 coming from the two atoms in
 Hydrogen molecule, where 
 $\lambdabar_{e} = \hbar/cm_{e}$
@@ -165,7 +165,7 @@ $$
 \end{array}
 $$
 which includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Thus, the correlation is eightfold,
-including, apart the two ones above, three relations which have been independently reported [3].
+including, apart the two ones above, three relations which have been independently reported \cite{Sanchez1}.
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number.
 
@@ -184,7 +184,7 @@ R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 \end{equation}
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 4, by intervention of canonical mathematical constants.
 
-The gravitational Hydrogen molecule model [3] implies the following double correlation,
+The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation,
 which is the simplest case of Eddington's statistical theory \cite{Eddy}. The position of a `reference particle`
 is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
@@ -212,7 +212,7 @@ exponential recession. There is no need of the so-called `dark energy`, the repu
 to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$. 
 
 The distance for which this force exceeds attractive
-gravitation between galaxies is about $10^{6}$ light years [3], which corresponds, in the Topological
+gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, which corresponds, in the Topological
 Axis, to the Atiyah Constant $\Gamma$, presented in the Section 4, see Fig 1.
 
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
@@ -221,7 +221,7 @@ another evacuation mechanism must occur: \textit{it would be the role of massive
 
 \subsection{Cosmic Holography and Toponic Quantification}
 
-In the steady-state cosmologic model of Bondi, Gold and Hoyle [3], the Perfect Cosmological
+In the steady-state cosmologic model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
 of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive
 neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
@@ -231,7 +231,7 @@ Principle, untill now devoted to 3D application only [6]:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated [3], the Permanent Cosmology must favor such integral relations. This one
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. This one
 uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
@@ -257,7 +257,7 @@ objections against the Hawking approach using trans-Plankian frequencies are wip
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
 \approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the
-elimination of $c$ between the classical electron radius and the Planck length [3]. In this way, the sphere
+elimination of $c$ between the classical electron radius and the Planck length \cite{Sanchez1}. In this way, the sphere
 of radius $R^{\prime}$ appears as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
@@ -298,14 +298,14 @@ $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
-the Combinatorial Hierarchy [3] of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
+the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
 Coming back to the central mass relation:
 \begin{equation}
 m_{P}^{4}\, = M m_{e} m_{p} m_{H}
 \end{equation}
 this directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
-that it is close to the mass of the human ovocyte [3]. In this way, the local inertia is related to the distant
+that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant
 masses, in accordance with the Mach principle, which the relativity theory does not explain.
 Another shortcoming of this theory is that it does not define any inertial frame. However, the
 Doppler assymmetry of the cosmic background indicates that the speed of our local group of galaxies is about
@@ -324,7 +324,7 @@ matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversi
 
 \subsubsection{Single Electron Cosmology}
 
-The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
+The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. It
 is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
@@ -344,14 +344,14 @@ This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
 range, with $\Gamma$, the Atiyah Constant (section 4.5).
 
-From the Holographic two-step interaction [3], it was deduced that the Kotov period is
+From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group, which appear again below.
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
-The Kotov non-Doppler cosmic oscillation [3] is not considered seriously, since it seems to
+The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
@@ -484,7 +484,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \subsubsection{The Tifft, Arp and the Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now, this
-speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
+speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
 
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
@@ -501,7 +501,7 @@ the three categories, $M$, $L$ and $T$ are Mass, Length and Time measurements, a
 rational numbers. However, the addition of measures of different categories has no significance.
 This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So, \textit{there
 must be a hidden common nature for the three categories, mass, length and time}. This sustains the
-above single electron cosmic model [3]. Moreover, this mimics the Fundamental Principle of
+above single electron cosmic model \cite{Sanchez1}. Moreover, this mimics the Fundamental Principle of
 Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. 
 
 Indeed, with $t =
@@ -550,7 +550,7 @@ In his three first minutes of cosmology, the first author obtained the length:
 \begin{equation}
 l \{\hbar,G,m\} = \hbar^{2} /Gm^{3} \approx R/2
 \end{equation}
-but it took 9 years to nurture this publication [12], and it appeared later [3] that $m$ must be considered more precisely as the cubic root of the product 
+but it took 9 years to nurture this publication [12], and it appeared later \cite{Sanchez1} that $m$ must be considered more precisely as the cubic root of the product 
 $
 m_{e} \cdot m_{p} \cdot m_{H}$
 
@@ -631,18 +631,18 @@ Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Ind
 following shows that 137 plays a central role in fine-tuning analysis. 
 
 One may interpret 137 + 1 as
-the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
+the sum of the numbers of dimensions in the Topological Axis \cite{Sanchez1}, taking into account the double
 point (H atom-Pion couple) for the superstring value n = 10, and the remarkable sum:
 \begin{equation}
 \sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
 \end{equation}
-So $137 = 2^{7} - 1 + 3 + 7$ the Combinatorial Hierarchy form [3]. But this appears also as 137 = 135 + 2,
+So $137 = 2^{7} - 1 + 3 + 7$ the Combinatorial Hierarchy form \cite{Sanchez1}. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing [3] the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
+meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
 proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{prime}/\lambdabar_e \approx 27^{27}, with 27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
@@ -684,7 +684,7 @@ thermal character. But \textit{in a totally deterministic cosmos, there is no pa
 connected with the black hole information paradigm [20]. Independently of our approach, an
 argument in favor of a total conservation of information was tied to a non-evolution cosmology
 [21], Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
-Physics are very similar [3]. 
+Physics are very similar \cite{Sanchez1}. 
 
 Note that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
@@ -705,9 +705,9 @@ Moreover, this confirms the central role of the Sternheimer scale factor $j = 8\
 \begin{equation}
 j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
-It was noted [3] that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters: $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved [3].
+It was noted \cite{Sanchez1} that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters: $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved \cite{Sanchez1}.
 
-Now, the study of the 22 amino-acids [3] has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
+Now, the study of the 22 amino-acids \cite{Sanchez1} has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
 The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$, in the ultimate theory. Indeed, to 0.3 ppm and 0.03 \% :
 \begin{equation}
@@ -736,7 +736,7 @@ confirming that $j$ and $\Gamma$ has the status of invariant generalised dimensi
 
 From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term $a^a$ must be central.
     
-Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of e [3]. Thus it seems interesting here to find its manifestations in classical mathematics. 
+Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius. Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of e \cite{Sanchez1}. Thus it seems interesting here to find its manifestations in classical mathematics. 
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$, which entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{n})}$, and for n = 9:
@@ -856,7 +856,7 @@ A confirmation of a symmetry between $a$ and 137 is the two following approximat
  $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
 where $D = 196883$ is the Moonshine Monster dimension [23], which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
-Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks [3]. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
+Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 leading to the approximation for the celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$ and confirming the role of bases $u = 5$ and $d = 6$, leading to (2.6 \%):
@@ -883,7 +883,7 @@ The corresponding value of $\pi$ in the last expression shows the fractional ser
 This corresponds to the above $G$ value to 10 ppb accuracy.
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
-The scale with 155 notes is not known, but 137 appears also in the classical musical scales [3], in
+The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}, in
 particular the $5^{th}$ 306 notes scale (about $\pi^{5}$), in conjunction with the canonical definition of the optimalscale e, encountered above.
 
 One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: 
@@ -1020,9 +1020,9 @@ Final Theory, while a large majority have abandoned such hope and believes serio
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
 debate in favor of a single steady-state cosmos.
 
-This article confirms direct connexions [3] between physical and biological parameters. So,
+This article confirms direct connexions \cite{Sanchez1} between physical and biological parameters. So,
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
-`Inverse Anthropic Principle` [3] is more logical, stating that an all-deterministic single Cosmos
+`Inverse Anthropic Principle` \cite{Sanchez1} is more logical, stating that an all-deterministic single Cosmos
 implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
 called `theory` with too much missing links [26]. The fundamental hypothesis of
 this article is that the Cosmos is like a computer. A common point with the brain is the multi-base
@@ -1036,7 +1036,7 @@ Biology). The present article shows that the former are right: physical constant
 constants, so the present-day mathematics are still in infancy, not realizing that the discovery of
 sporadic groups is a crucial discovery for physics. In particular, it is clearly shown that
 Grandcosmos is like a computer which uses optimal physics-mathematics dimensionless constants as
-calculation basis and that they are present in DNA characteristics [3]. The present article shows
+calculation basis and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
 definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
 them, and rehabilitates string theories, also abandoned by amajority [27].
 
@@ -1044,7 +1044,7 @@ There is also the Determinism separation, a majority believing seriously that `G
 in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
 directly the Supercycle period of an all-deterministic Grandcosmos, as it gives in an elementary
 calculation the visible Universe horizon radius, in a formula which was present for a century in
-astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity [3].
+astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 This is tied to the application of the exclusion principle that Eddington dared to apply in
 cosmology. For this reason he was declared as a `crakpot` and his theory discarded by a majority.
 Fortunately, the large theoretical advance of Eddington is now recognized [28][29], but without
@@ -1156,7 +1156,7 @@ they are optimal basis of computation tied with the Holographic Principle and it
 the Holic Principle, which explains why normal space has 3 dimensions.
 \item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalisation of $e$ and $\pi$
 \item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constan $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
-\item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation [3].  
+\item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation \cite{Sanchez1}.  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
 \item 9/ The grandcosmos is huge but not infinite, in conformity with the Cosmological Computational Principle.
 
@@ -1192,15 +1192,15 @@ structure of the physical world'', Nature 278, 605-612 (1979).
 
 \bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{3} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. Springer
+\bibitem{Sanchez1} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. Springer
 International Publishing AG. A. Tadjer et al. (eds.), Quantum Systems in
 Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics
 30 (2017), p. 375-407; DOI 10.1007/978-3-319-50255-7-23.
 
-\bibitem{4} Bonvin V. ``Holicow, New cosmograil time delays of HE 0435-1223'',
+\bibitem{Bonvin} Bonvin V. ``Holicow, New cosmograil time delays of HE 0435-1223'',
 arXiv: 1607.01790v2 (2016).
 
-\bibitem{5} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
+\bibitem{Sanchez2} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
 7225-7237 (2011).
 
