--- a/main.tex
+++ b/main.tex
@@ -143,7 +143,7 @@ gravitational coupling constant is:
 $a_{G} = \hbar c/Gm_{p}m_{H}$
 So, \textit{the speed c is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
-most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
+most recent measurement \cite{Bonvin}: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
 
 Consider the wavelength $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to n $\approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
@@ -174,7 +174,7 @@ Considering the standard cosmological neutrino background (CNB), which wavelengt
 ( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$
 The appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
-antimatter Oscillatory Bounce [5].
+antimatter Oscillatory Bounce \cite{Sanchez2}.
 
 It was noted in \cite{Carr} that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
@@ -315,7 +315,7 @@ The mathematical continuity is excluded by the above Computation Principle, so t
 to the above 'topon' 
 $$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
 is the new candidate for the `Chronon`, the `quantum of time`, so the
-oscillatory bounce has a frequency about $10^{104}Hz $ [5].
+oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
 
 \subsection{Tachyonic Flickering Space-Time-Matter}
 
@@ -1122,7 +1122,7 @@ Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confu
 
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
 justifying the elimination of $c$, as in the Haas-Bohr model. This corresponds to a Hubble constant 70.790
-(km/s)/Megaparsec, consistent with the recent measurement [4]: 72(3) Megaparsec/(km/s), which
+(km/s)/Megaparsec, consistent with the recent measurement \cite{Bonvin}: 72(3) Megaparsec/(km/s), which
 confirms the direct novea measurement, but disagree (3$\sigma$) with the standard value.
 
 The simplest statistical theory of Eddington gave another justification to $R$. Also, particularly
